--- a/src/sass/partials/_base.scss
+++ b/src/sass/partials/_base.scss
@@ -91,5 +91,6 @@ svg {
   left: -5%;
   text-align: center;
   color: rgba(255, 255, 255, 0.025);
+  overflow: hidden;
   // background-blend-mode: difference;
 }
