--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -90,11 +90,13 @@
   top: 4rem;
   // height: 0;
   width: 100%;
-  height: 150px;
-  right: -100%;
+  height: 0;
+  top: 4rem;
   // top: -214px;
   margin: 0 auto;
   background-color: getColor(footerBg);
+  overflow: hidden;
+  // background-color: pink;
   // background: rgb(16, 30, 67);
   // background: linear-gradient(rgba(16, 30, 67, 1) 0%, rgba(15, 23, 42, 1) 100%);
   // background: rgba($color: #fff, $alpha: 0.1);
@@ -102,7 +104,6 @@
   // border-radius: 3px;
   // overflow: hidden;
   // transition: height 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.2475);
-  
 
   @media (min-width: getBreakpoint(large)) {
     display: none;
@@ -111,17 +112,17 @@
 }
 
 .dropdown--open {
-  right: -500px;
+  // top: 64px;
   animation: test 0.3s ease forwards;
 }
 
 @keyframes test {
   0% {
-    right: -1000px;
+    height: 0;
   }
 
   100% {
-    right: 0;
+    height: 150px;
   }
 }
 
